tdf#108826 sw: also handle RES_REMOVE_UNO_OBJECT in SwCallMouseEvent

This is sent from SwUndoFlyBase::DelFly(); the SwFrameFormat isn't
deleted in this case but it's no longer part of the document, so
an UI class like SwCallMouseEvent should stop pointing to it.

Change-Id: I05349271d14bb1948ea30528cd85c68ed638f28e